# orage

./: .cvsignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  configure.in.in  libical-0.24.pc  module.xml  todo.txt  xfcalendar.desktop  xfcalendar.desktop.in  xfcalendar.glade  xfcalendar.gladep  xfcalendar.spec.in
doc/: Makefile.am  orage.1  orage.xml
doc/C/: Makefile.am  orage.html  orage.xml
doc/C/images/: Makefile.am  default_calendar.eps  orage_desktop_menuitem.eps
globaltime/: Makefile.am  globaltime.1  globaltime.c  globaltime.desktop.in  globaltime.h  globaltime.xml  gt_parfile.c  gt_prefs.c  timezone_selection.c  timezone_selection.h  tz_zoneinfo_read.c  tz_zoneinfo_read.h
icons/160x160/: Makefile.am
libical/src/libicalss/: .cvsignore  Makefile.am  Makefile.in  icalfileset.c  icalfileset.h  icalgauge.c  icalmessage.c  icalset.h  icalss.h  icalssyacc.c
libical/zoneinfo/: CET.ics  CST6CDT.ics  Cuba.ics  EET.ics  EST.ics  EST5EDT.ics  Egypt.ics  Eire.ics  Factory.ics  GB-Eire.ics  GB.ics  GMT+0.ics  GMT-0.ics  GMT.ics  GMT0.ics  Greenwich.ics  HST.ics  Hongkong.ics  Iceland.ics  Iran.ics  Israel.ics  Jamaica.ics  Japan.ics  Kwajalein.ics  Libya.ics  MET.ics  MST.ics  MST7MDT.ics  Makefile.am  Makefile.in  NZ-CHAT.ics  NZ.ics  Navajo.ics  PRC.ics  PST8PDT.ics  Poland.ics  Portugal.ics  ROC.ics  ROK.ics  Singapore.ics  (+9 more)
libical/zoneinfo/Africa/: Abidjan.ics  Accra.ics  Addis_Ababa.ics  Algiers.ics  Asmara.ics  Asmera.ics  Bamako.ics  Bangui.ics  Banjul.ics  Bissau.ics  Blantyre.ics  Brazzaville.ics  Bujumbura.ics  Cairo.ics  Casablanca.ics  Ceuta.ics  Conakry.ics  Dakar.ics  Dar_es_Salaam.ics  Djibouti.ics  Douala.ics  El_Aaiun.ics  Freetown.ics  Gaborone.ics  Harare.ics  Johannesburg.ics  Kampala.ics  Khartoum.ics  Kigali.ics  Kinshasa.ics  Lagos.ics  Libreville.ics  Lome.ics  Luanda.ics  Lubumbashi.ics  Lusaka.ics  Malabo.ics  Maputo.ics  Maseru.ics  Mbabane.ics  (+13 more)
libical/zoneinfo/America/: Adak.ics  Anchorage.ics  Anguilla.ics  Antigua.ics  Araguaina.ics  Aruba.ics  Asuncion.ics  Atikokan.ics  Atka.ics  Bahia.ics  Barbados.ics  Belem.ics  Belize.ics  Blanc-Sablon.ics  Boa_Vista.ics  Bogota.ics  Boise.ics  Buenos_Aires.ics  Cambridge_Bay.ics  Campo_Grande.ics  Cancun.ics  Caracas.ics  Catamarca.ics  Cayenne.ics  Cayman.ics  Chicago.ics  Chihuahua.ics  Coral_Harbour.ics  Cordoba.ics  Costa_Rica.ics  Cuiaba.ics  Curacao.ics  Danmarkshavn.ics  Dawson.ics  Dawson_Creek.ics  Denver.ics  Detroit.ics  Dominica.ics  Edmonton.ics  Eirunepe.ics  (+89 more)
libical/zoneinfo/Antarctica/: Casey.ics  Davis.ics  DumontDUrville.ics  Mawson.ics  McMurdo.ics  Palmer.ics  Rothera.ics  South_Pole.ics  Syowa.ics  Vostok.ics
libical/zoneinfo/Arctic/: Longyearbyen.ics
libical/zoneinfo/Asia/: Aden.ics  Almaty.ics  Amman.ics  Anadyr.ics  Aqtau.ics  Aqtobe.ics  Ashgabat.ics  Ashkhabad.ics  Baghdad.ics  Bahrain.ics  Baku.ics  Bangkok.ics  Beirut.ics  Bishkek.ics  Brunei.ics  Calcutta.ics  Choibalsan.ics  Chongqing.ics  Chungking.ics  Colombo.ics  Dacca.ics  Damascus.ics  Dhaka.ics  Dili.ics  Dubai.ics  Dushanbe.ics  Gaza.ics  Harbin.ics  Ho_Chi_Minh.ics  Hong_Kong.ics  Hovd.ics  Irkutsk.ics  Istanbul.ics  Jakarta.ics  Jayapura.ics  Jerusalem.ics  Kabul.ics  Kamchatka.ics  Karachi.ics  Kashgar.ics  (+50 more)
libical/zoneinfo/Atlantic/: Azores.ics  Bermuda.ics  Canary.ics  Cape_Verde.ics  Faeroe.ics  Faroe.ics  Jan_Mayen.ics  Madeira.ics  Reykjavik.ics  South_Georgia.ics  St_Helena.ics  Stanley.ics
libical/zoneinfo/Australia/: ACT.ics  Adelaide.ics  Brisbane.ics  Broken_Hill.ics  Canberra.ics  Currie.ics  Darwin.ics  Eucla.ics  Hobart.ics  LHI.ics  Lindeman.ics  Lord_Howe.ics  Melbourne.ics  NSW.ics  North.ics  Perth.ics  Queensland.ics  South.ics  Sydney.ics  Tasmania.ics  Victoria.ics  West.ics  Yancowinna.ics
libical/zoneinfo/Brazil/: Acre.ics  DeNoronha.ics  East.ics  West.ics
libical/zoneinfo/Canada/: Atlantic.ics  Central.ics  East-Saskatchewan.ics  Eastern.ics  Mountain.ics  Newfoundland.ics  Pacific.ics  Saskatchewan.ics  Yukon.ics
libical/zoneinfo/Chile/: Continental.ics  EasterIsland.ics
libical/zoneinfo/Etc/: GMT+0.ics  GMT+1.ics  GMT+10.ics  GMT+11.ics  GMT+12.ics  GMT+2.ics  GMT+3.ics  GMT+4.ics  GMT+5.ics  GMT+6.ics  GMT+7.ics  GMT+8.ics  GMT+9.ics  GMT-0.ics  GMT-1.ics  GMT-10.ics  GMT-11.ics  GMT-12.ics  GMT-13.ics  GMT-14.ics  GMT-2.ics  GMT-3.ics  GMT-4.ics  GMT-5.ics  GMT-6.ics  GMT-7.ics  GMT-8.ics  GMT-9.ics  GMT.ics  GMT0.ics  Greenwich.ics  UCT.ics  UTC.ics  Universal.ics  Zulu.ics
libical/zoneinfo/Europe/: Amsterdam.ics  Andorra.ics  Athens.ics  Belfast.ics  Belgrade.ics  Berlin.ics  Bratislava.ics  Brussels.ics  Bucharest.ics  Budapest.ics  Chisinau.ics  Copenhagen.ics  Dublin.ics  Gibraltar.ics  Guernsey.ics  Helsinki.ics  Isle_of_Man.ics  Istanbul.ics  Jersey.ics  Kaliningrad.ics  Kiev.ics  (+37 more)
panel-plugin/: Makefile.am  oc_config.c  orageclock.c  orageclock.desktop.in.in  orageclock.h  timezone_selection.c  timezone_selection.h  tz_zoneinfo_read.c  tz_zoneinfo_read.h  xfce4-orageclock-plugin.c  xfce4-orageclock-plugin.desktop.in  xfce4-orageclock-plugin.desktop.in.in  xfce4-orageclock-plugin.h
plugin/: .cvsignore  Makefile.am  Makefile.in  xfcalendar_plugin.c  xfce-xfcalendar-settings.desktop  xfce-xfcalendar-settings.desktop.in
sounds/: Makefile  Makefile.am  Makefile.in
sounds/CVS/: Entries  Repository  Root
src/: .cvsignore  Makefile.am  Makefile.in  about-xfcalendar.c  about-xfcalendar.h  appointment.c  appointment.h  calendar-icon.h  callbacks.c  callbacks.h  day-view.c  day-view.h  event-list.c  event-list.h  functions.c  functions.h  ical-archive.c  ical-code.c  ical-code.h  ical-expimp.c  ical-internal.h  interface.c  interface.h  main.c  mainbox.c  mainbox.h  orage-dbus-client.c  orage-dbus-client.h  orage-dbus-object.c  orage-dbus-object.h  orage-dbus-service.h  orage-dbus-service.xml  orage-dbus.h  orage-i18n.h  parameters.c  parameters.h  parameters_internal.h  reminder.c  reminder.h  support.c  (+10 more)
tz_convert/: Makefile.am  tz_convert.1  tz_convert.c  tz_convert.xml
(+281 files in other folders)
