# $Id$

iconsdir = $(datadir)/icons/hicolor/160x160/apps
icons_DATA =								\
	orage.xpm                               \
	orage_ice.xpm                           \
	orage_round.xpm                         \
	orage_sun.xpm

EXTRA_DIST =								\
	$(icons_DATA)

# vi:set ts=8 sw=8 noet ai nocindent:
