imagesdir = $(datadir)/orage/doc/C/images
images_DATA = \
	default_calendar.png \
	orage_calendar_edit_menu.png \
	orage_calendar_file_menu.png \
	orage_calendar_help_menu.png \
	orage_calendar_view_menu.png \
	orage_desktop_menuitem.png \
	orage_eventlist.png \
	orage_appointment.png \
	orage_appointment_alarm.png \
	orage_appointment_recurrence.png \
	orage_preferences_display.png \
	orage_preferences_archives.png \
	orage_preferences_sound.png \
	orage_preferences_timezone.png 

EXTRA_DIST = $(images_DATA)
